--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
             Mikusiek
         </div>
         <ul>
-            <li><a href="#portfolio">Portfolio</a></li>
-            <li><a href="#about">O Mnie</a></li>
-            <li><a href="#contact">Kontakt</a></li>
+            <li><a href="#portfolio">Projekty</a></li>
         </ul>
         <div class="nav-toggle">
             <span></span>
@@ -38,31 +36,24 @@
         </div>
     </div>
 </header>
-
-<section id="about" class="about">
-    <h2 data-aos="fade-up">O Mnie</h2>
-    <div class="bio" data-aos="fade-up" data-aos-delay="200">
-        <img src="avatar.png" alt="Moje Zdjęcie">
-        <p>Cześć! Jestem pasjonatem designu i programowania. Uwielbiam tworzyć nowoczesne strony internetowe, które nie tylko wyglądają świetnie, ale także są funkcjonalne i przyjazne dla użytkownika.</p>
-    </div>
 </section>
 
 <section id="portfolio" class="portfolio">
-    <h2 data-aos="fade-up">Portfolio</h2>
+    <h2 data-aos="fade-up">Projekty</h2>
     <div class="projects">
         <div class="project" data-aos="zoom-in" data-aos-delay="200">
             <div class="project-image">
                 <img src="project1.jpg" alt="Projekt 1">
             </div>
-            <h3>WinterMc.pl (+150)</h3>
-            <p>Krótki opis projektu.</p>
+            <h3>WinterMc (+150)</h3>
+            <p>Ranga Ekipa Winter</p>
         </div>
         <div class="project" data-aos="zoom-in" data-aos-delay="400">
             <div class="project-image">
                 <img src="project2.jpg" alt="Projekt 2">
             </div>
-            <h3>WolfHub.pl (+460)</h3>
-            <p>Krótki opis projektu.</p>
+            <h3>WojanMC (27k+)</h3>
+            <p>Ranga Pomocnik+</p>
         </div>
     </div>
 </section>
@@ -70,13 +61,13 @@
 <footer id="contact">
     <div class="footer-top">
         <div class="social-media" data-aos="fade-up" data-aos-delay="200">
-            <a href="https://github.com/mojprofil" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="https://discord.gg/mojlink" target="_blank"><i class="fab fa-discord"></i></a>
-            <a href="https://youtube.com/mojprofil" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://github.com/Mikusiek144" target="_blank"><i class="fab fa-github"></i></a>
+            <a href="discord.com/users/819177818864746496" target="_blank"><i class="fab fa-discord"></i></a>
+            <a href="hhttps://www.youtube.com/@Mikusiek144" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
     <div class="footer-bottom">
-        <p>&copy; 2025 Mikusiek. Wszystkie prawa zastrzeżone.</p>
+        <p> 2025 Mikusiek</p>
     </div>
 </footer>
 
