--- a/index.html
+++ b/index.html
@@ -11,6 +11,10 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
+<!-- Niestandardowy kursor -->
+<div class="custom-cursor"></div>
+
+<!-- Sekcja nagłówka -->
 <header>
     <div class="background-png"></div>
     <nav>
@@ -36,8 +40,8 @@
         </div>
     </div>
 </header>
-</section>
 
+<!-- Sekcja portfolio -->
 <section id="portfolio" class="portfolio">
     <h2 data-aos="fade-up">Projekty</h2>
     <div class="projects">
@@ -58,12 +62,13 @@
     </div>
 </section>
 
+<!-- Stopka -->
 <footer id="contact">
     <div class="footer-top">
         <div class="social-media" data-aos="fade-up" data-aos-delay="200">
             <a href="https://github.com/Mikusiek144" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="discord.com/users/819177818864746496" target="_blank"><i class="fab fa-discord"></i></a>
-            <a href="hhttps://www.youtube.com/@Mikusiek144" target="_blank"><i class="fab fa-youtube"></i></a>
+            <a href="https://discord.com/users/819177818864746496" target="_blank"><i class="fab fa-discord"></i></a>
+            <a href="https://www.youtube.com/@Mikusiek144" target="_blank"><i class="fab fa-youtube"></i></a>
         </div>
     </div>
     <div class="footer-bottom">
@@ -71,7 +76,72 @@
     </div>
 </footer>
 
+<!-- Skrypty -->
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script src="script.js"></script>
+<script>
+    // Inicjalizacja AOS (Animacje)
+    AOS.init({
+        duration: 1000,
+        once: true,
+    });
+
+    // Niestandardowy kursor
+    const customCursor = document.querySelector(".custom-cursor");
+
+    // Obsługa ruchu myszy
+    document.addEventListener("mousemove", function (e) {
+        customCursor.style.left = `${e.clientX}px`;
+        customCursor.style.top = `${e.clientY}px`;
+    });
+
+    // Obsługa najechania na link
+    const links = document.querySelectorAll("a");
+    links.forEach(link => {
+        link.addEventListener("mouseenter", function () {
+            customCursor.style.backgroundImage = "url('link-cursor.cur')";
+        });
+        link.addEventListener("mouseleave", function () {
+            customCursor.style.backgroundImage = "url('default-cursor.cur')";
+        });
+    });
+
+    // Przewijanie strony po kliknięciu strzałki
+    const scrollDown = document.getElementById("scroll-down");
+    scrollDown.addEventListener("click", () => {
+        window.scrollTo({
+            top: document.getElementById("portfolio").offsetTop,
+            behavior: "smooth"
+        });
+    });
+
+    // Płynne przewijanie do sekcji portfolio po kliknięciu w "Projekty"
+    document.querySelectorAll('nav ul li a[href="#portfolio"]').forEach(link => {
+        link.addEventListener("click", function (e) {
+            e.preventDefault(); // Zapobiega domyślnej akcji linku
+            const portfolioSection = document.getElementById("portfolio");
+            if (portfolioSection) {
+                portfolioSection.scrollIntoView({
+                    behavior: "smooth" // Płynne przewijanie
+                });
+            }
+        });
+    });
+
+    // Ograniczenie przewijania strony
+    function limitScroll() {
+        const footer = document.querySelector("footer");
+        const maxScroll = footer.offsetTop + footer.offsetHeight - window.innerHeight;
+
+        if (window.scrollY > maxScroll) {
+            window.scrollTo({
+                top: maxScroll,
+                behavior: "auto"
+            });
+        }
+    }
+
+    // Nasłuchuj zdarzenia przewijania
+    window.addEventListener("scroll", limitScroll);
+</script>
 </body>
 </html>
