--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" type="image/png" href="avatar.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
-    <link href="https://unpkg.com/aos@next/dist/aos.css" rel="stylesheet">
+    <link href="https://unpkg.com/aos@next/dist/aos. css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -106,11 +106,11 @@
 
     document.querySelectorAll('nav ul li a[href="#portfolio"]').forEach(link => {
         link.addEventListener("click", function (e) {
-            e.preventDefault(); // Zapobiega domyślnej akcji linku
+            e.preventDefault();
             const portfolioSection = document.getElementById("portfolio");
             if (portfolioSection) {
                 portfolioSection.scrollIntoView({
-                    behavior: "smooth" // Płynne przewijanie
+                    behavior: "smooth"
                 });
             }
         });
