--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mikusiek</title>
+    <title>Mikusiek144</title>
     <link rel="icon" type="image/png" href="avatar.png">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@400;700&family=Inter:wght@400;700&display=swap" rel="stylesheet">
@@ -18,7 +18,7 @@
     <nav>
         <div class="logo">
             <img src="avatar.png" alt="Avatar" class="nav-avatar">
-            Mikusiek
+            Mikusiek144
         </div>
         <ul>
             <li><a href="#portfolio">Projekty</a></li>
@@ -68,7 +68,7 @@
         </div>
     </div>
     <div class="footer-bottom">
-        <p> 2025 Mikusiek</p>
+        <p> 2025 Mikusiek144</p>
     </div>
 </footer>
 
