--- a/index.html
+++ b/index.html
@@ -37,6 +37,15 @@
     </div>
 </header>
 
+<section class="portfolio" id="portfolio">
+    <h2>Projekty</h2>
+    <div class="projects">
+        <div class="project" data-aos="zoom-in" data-aos-delay="200">
+            <div class="project-image">
+                <img src="project1.jpg" alt="Projekt 1">
+            </div>
+            <h3>Inny Projekt</h3>
+            <p>Opis innego projektu</p>
         </div>
         <div class="project" data-aos="zoom-in" data-aos-delay="400">
             <div class="project-image">
