--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="pl">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -19,7 +19,7 @@
             Mikusiek144
         </div>
         <ul>
-            <li><a href="#portfolio">Realizacje</a></li>
+            <li><a href="#portfolio">Projects</a></li>
         </ul>
         <div class="nav-toggle">
             <span></span>
@@ -28,25 +28,25 @@
         </div>
     </nav>
     <div class="hero">
-        <h1 data-aos="fade-up" data-aos-delay="200">Witaj w Moim Świecie</h1>
+        <h1 data-aos="fade-up" data-aos-delay="200">Welcome to My World</h1>
         <p data-aos="fade-up" data-aos-delay="400">Java Developer, Web Developer</p>
         <div class="scroll-down" data-aos="fade-up" data-aos-delay="600" id="scroll-down">
-            <span>Przewiń w dół</span>
+            <span>Scroll Down</span>
             <div class="arrow"></div>
         </div>
     </div>
 </header>
 <section class="portfolio" id="portfolio">
-    <h2>REALIZACJE</h2>
+    <h2>PROJECTS</h2>
     <div class="projects">
         <div class="project" data-aos="fade-up" data-aos-delay="200">
             <div class="project-image">
                 <img src="wolfhub.png" alt="Wolfhub.pl">
             </div>
             <h3>Wolfhub.pl</h3>
-            <p class="project-description">Przyjazny design strony</p>
+            <p class="project-description">Friendly website design</p>
             <a href="https://wolfhub.pl" target="_blank" class="project-visit">
-                Zobacz <span class="arrow">→</span>
+                View <span class="arrow">→</span>
             </a>
         </div>
     </div>
