--- a/index.html
+++ b/index.html
@@ -64,43 +64,6 @@
     </div>
 </footer>
 <script src="https://unpkg.com/aos@next/dist/aos.js"></script>
-<script>
-    AOS.init({
-        duration: 1000,
-        once: true,
-    });
-    document.addEventListener("contextmenu", function (e) {
-        e.preventDefault();
-    });
-    const scrollDown = document.getElementById("scroll-down");
-    scrollDown.addEventListener("click", () => {
-        window.scrollTo({
-            top: document.getElementById("portfolio").offsetTop,
-            behavior: "smooth"
-        });
-    });
-    document.querySelectorAll('nav ul li a[href="#portfolio"]').forEach(link => {
-        link.addEventListener("click", function (e) {
-            e.preventDefault();
-            const portfolioSection = document.getElementById("portfolio");
-            if (portfolioSection) {
-                portfolioSection.scrollIntoView({
-                    behavior: "smooth"
-                });
-            }
-        });
-    });
-    function limitScroll() {
-        const footer = document.querySelector("footer");
-        const maxScroll = footer.offsetTop + footer.offsetHeight - window.innerHeight;
-        if (window.scrollY > maxScroll) {
-            window.scrollTo({
-                top: maxScroll,
-                behavior: "auto"
-            });
-        }
-    }
-    window.addEventListener("scroll", limitScroll);
-</script>
+<script src="script.js"></script>
 </body>
 </html>
