--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
             </div>
             <h3>Wolfhub.pl</h3>
             <p class="project-description">Friendly website design</p>
-            <a href="https://wolfhub.pl" target="_blank" class="project-visit">
+            <a href="https://beta.mikusiek144.space" target="_blank" class="project-visit">
                 View <span class="arrow">→</span>
             </a>
         </div>
