--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
 </main>
 
 <footer>
+    <a href="https://beta.mikusiek144.space" target="_blank" rel="noopener noreferrer" class="beta-link">Wypróbuj coś nowego – beta.mikusiek144.space</a>
     <p>© 2025 Mikusiek144</p>
     <p class="made-with">Made with <i class="fas fa-heart"></i></p>
 </footer>
