--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                 </div>
                 <div class="skill-item">
-                    <span>Tworzenie Statycznych Stron</span>
+                    <span>Strony WWW</span>
                     <div class="skill-bar">
                         <div class="skill-level" style="width: 90%"></div>
                     </div>
@@ -86,7 +86,7 @@
     <section class="portfolio" id="portfolio">
         <div class="section-header" data-aos="fade-up">
             <h2>Realizacje</h2>
-            <p class="section-subtitle">Wybrane realizacje // 2024–2025</p>
+            <p class="section-subtitle">Wybrane realizacje // 2024–2026</p>
         </div>
         <div class="projects">
             <div class="project" data-aos="fade-up">
@@ -137,8 +137,7 @@
 </main>
 
 <footer>
-    <a href="https://beta.mikusiek144.space" target="_blank" rel="noopener noreferrer" class="beta-link">Wypróbuj coś nowego – beta.mikusiek144.space</a>
-    <p>© 2025 Mikusiek144</p>
+    <p>© 2026 Mikusiek144</p>
     <p class="made-with">Made with <i class="fas fa-heart"></i></p>
 </footer>
 
