--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div>
         <div class="about-content">
             <div class="about-text" data-aos="fade-right">
-                <p>Cześć jestem Mikusiek. Potrafię robić statyczne strony internetowe oraz proste pluginy do minecrafta. Cały czas uczę się nowych rzeczy i staram się rozwijać swoje umiejętności.</p>
+                <p>Cześć jestem Mikusiek. Potrafię robić strony internetowe oraz proste pluginy do minecrafta. Cały czas uczę się nowych rzeczy i staram się rozwijać swoje umiejętności.</p>
             </div>
             <div class="skills" data-aos="fade-left">
                 <div class="skill-item">
@@ -145,3 +145,4 @@
 <script src="script.js"></script>
 </body>
 </html>
+
